feat: dsr lection

--- a/src/components/code/code-js/pages/elem-code-js.html
+++ b/src/components/code/code-js/pages/elem-code-js.html
@@ -23,6 +23,8 @@
   <div class="anchor" id="links"></div>
   <h2>links</h2>
 
+  <p><a href="https://es5.javascript.ru/">es5.javascript.ru</a> Перевод стандарта ES5</p>
+  <p><a href="https://doka.guide/js/">doka.guide/js</a> Дока — это документация для разработчиков на понятном языке</p>
   <p><a href="https://my-js.org/">my-js.org</a> MyJavaScript Руководства, шпаргалки</p>
   <p><a href="https://metanit.com/web/javascript/">metanit.com/web/javascript</a> Руководство по JavaScript (обновление 2023-07-15)</p>
   <p><a href="https://jsexpert.net/handbook/">jsexpert.net/handbook/</a> JavaScript справочник</p>
@@ -32,6 +34,11 @@
 
   <p><a href="https://habr.com/ru/articles/188010/">Знай сложности алгоритмов</a> (Eric Rowell 2013-07-29)</p>
   <p><a href="https://habr.com/ru/articles/196560/">Введение в анализ сложности алгоритмов (часть 1)</a> (Dionysis Zindros 2013-10-07)</p>
+  <p><a href="https://habr.com/ru/companies/livetyping/articles/324196/">Краткая история JavaScript. Часть 1</a> (Андрей Руденко 2017-03-17)</p>
+  <p><a href="https://habr.com/ru/companies/livetyping/articles/324506/">Краткая история JavaScript. Часть 2</a> (Андрей Руденко 2017-03-21)</p>
+  <p><a href="https://habr.com/ru/companies/livetyping/articles/324908/">Краткая история JavaScript. Часть 3</a> (Андрей Руденко 2017-03-27)</p>
+  <p><a href="https://habr.com/ru/articles/740934/">ECMAScript 2015, 2016, 2017, 2018, 2019, 2020, 2021</a> (Ирина Мельникова @JetBlackCodes 2023-06-09)</p>
+  <p><a href="https://habr.com/ru/articles/741372/">Новые возможности ECMAScript 2021-2023</a> (Ирина Мельникова @JetBlackCodes 2023-06-13)</p>
   <p><a href="https://habr.com/ru/post/518386/">JavaScript: полное руководство по классам</a> (Dmitri Pavlutin 2020-09-09)</p>
   <p><a href="https://habr.com/ru/post/522380/">Объектно-ориентированный JavaScript простыми словами</a> (Zell Liew 2020-10-07)</p>
   <p><a href="https://habr.com/ru/company/otus/blog/547098/">Основы JavaScript: почему вы должны знать, как работает JS-движок</a> (OTUS 2021-03-15)</p>
