--- a/src/components/front/front-edu/pages/dsr/dsr2023net-lecture0.html
+++ b/src/components/front/front-edu/pages/dsr/dsr2023net-lecture0.html
@@ -1,6 +1,9 @@
-<a href="#" id="edu-dsr">назад</a>
+<article class="article">
+	<div id="link-to-dsr2023net" class="btn-back">назад</div>
 
-<h1>2023-09-26 DSR .NET School 2023/24 online presentation</h1>
+  <h1>2023-09-26 DSR .NET School 2023/24 online presentation</h1>
+</article>
+
 
 <article class="article">
 	<p>Еще раз всем привет. Я думаю что основная масса уже к нам присоединилась. Большое спасибо что пришли. Предлагаю начать с небольшого ролика компании. Нашей компании недавно исполнилось 25 лет. Буквально на днях. Давайте посмотрим чего же мы достигли за эти четверть века. Да, и просьба, если вдруг у вас микрофон включен, пожалуйста выключите его.</p>
@@ -327,5 +330,5 @@
 
 	<p>Гит с докером конечно. Мы работаем с гитом. Вы должны будете на гите сделать репозиторий для курсового проекта. Предоставить к нему доступ. Ментор будет клонировать себе репозиторий. Запускать докер и смотреть запустилось или нет. Это было бы идеально. Для того чтобы заказчик, ментор не разбирался в вашем коде, они очень занятые люди и их время очень дорого стоит, надо сделать так чтобы им понравилось и их не напрягать. Заказчика вообще напрягать не очень хорошо. Такая тренировка перед работой с заказчиком.</p>
 
-	<p>Наше время подходит к концу. Если будут вопросы задавайте их в телеграм канале. Он для этого и создан. Там будут и материалы и записи лекций и объявления важные. Пожелаю всем вам удачи в обучении. И большое спасибо что пришли сегодня. Большое спасибо нашим преподавателям, которые рассказали про курс. Нашему Андрею, которы автор этого курса</p>
+	<p>Наше время подходит к концу. Если будут вопросы задавайте их в телеграм канале. Он для этого и создан. Там будут и материалы и записи лекций и объявления важные. Пожелаю всем вам удачи в обучении. И большое спасибо что пришли сегодня. Большое спасибо нашим преподавателям, которые рассказали про курс. Нашему Андрею, который автор этого курса.</p>
 </article>
