--- a/src/components/front/front-edu/pages/dsr/dsr2023net-lecture9.html
+++ b/src/components/front/front-edu/pages/dsr/dsr2023net-lecture9.html
@@ -1,9 +1,9 @@
-<a href="#" id="edu-dsr">назад</a>
+<article class="article">
+	<div id="link-to-dsr2023net" class="btn-back">назад</div>
 
-<h1>2023-11-27 DSR .NET School 2023 Lecture #9 Persistence layer</h1>
+  <h1>2023-11-27 DSR .NET School 2023 Lecture #9 Persistence layer</h1>
+</article>
+
 
 <h2>Лекция 9. Persistence layer</h2>
 
-<ul>
-
-</ul>
