--- a/src/components/front/front-edu/pages/elem-edu-dsr2023net.html
+++ b/src/components/front/front-edu/pages/elem-edu-dsr2023net.html
@@ -42,102 +42,120 @@
     Репозиторий с примерами и практикой
     <br><a href="https://github.com/KononovAndrey/NetSchool2023">github.com/KononovAndrey/NetSchool2023</a>
   </p>
+</article>
 
-  <p>
-    Запись презентации курса 26.09.2023
-    <a href="https://youtu.be/mUO4KCUGokw">.net school presentation</a>
-    <a href="dsr/dsr2023net-lecture0.html" class="js-dsr-lecture">Конспект Лекция 0</a>
-  </p>
+<article class="article">
+  <h3>26.09.2023 .net school presentation</h3>
+  <p><a href="https://youtu.be/mUO4KCUGokw">Запись презентации курса</a></p>  
+  <p><a href="dsr/dsr-lecture0.html" class="js-dsr-lecture">Конспект Лекция 0</a></p>  
+</article>
 
-  <p>
-    Запись лекции 1 02.10.2023
-    <a href="https://youtu.be/Ljt1nBHcccs">Lecture #1 Software Developer</a>
-    <a href="dsr/dsr2023net-lecture1.html" class="js-dsr-lecture">Конспект Лекция 1</a>
-  </p>
+<article class="article">
+  <h3>02.10.2023 Lecture #1 Software Developer</h3>
+  <p><a href="https://youtu.be/Ljt1nBHcccs">Запись лекции 1 </a></p>
+  <p><a href="dsr/dsr-lecture1.html" class="js-dsr-lecture">Конспект Лекция 1</a></p>
+</article>
 
-  <p>
-    Запись лекции 2 09.10.2023
-    <a href="https://youtu.be/AhLj2poT4m8">Lecture #2 C# типы данных</a>
-    <a href="dsr/dsr-lecture-2.html" class="js-dsr-lecture">Конспект Лекция 2</a>
-  </p>
-
-  <p>
-    Запись лекции 3 16.10.2023
-    <a href="https://youtu.be/Z2WW5MLrmOg">Lecture #3 C# part 2</a>
-    <a href="dsr/dsr-lecture-3.html" class="js-dsr-lecture">Конспект Лекция 3</a>
-  </p>
-
-  <p>
-    Запись лекции 4 23.10.2023
-    <a href="https://youtu.be/zGsMv5Fa3kc">Lecture #4 Web application</a>
-    <a href="dsr/dsr-lecture-4.html" class="js-dsr-lecture">Конспект Лекция 4</a>
-  </p>
-
-  <p>
-    Запись лекции 5 30.10.2023
-    <a href="https://youtu.be/zwXRDDHY-1M">Lecture #5 Web application</a>
-    <a href="dsr/dsr-lecture-5.html" class="js-dsr-lecture">Конспект Лекция 5</a>
-  </p>
-
-  <p>
-    Запись лекции 6 09.11.2023
-    <a href="https://youtu.be/fSapZRio5Ao">Lecture #6 DBMS</a>
-    <a href="dsr/dsr-lecture-6.html" class="js-dsr-lecture">Конспект Лекция 6</a>
-  </p>
-
-  <p>
-    Запись лекции 7 13.11.2023
-    <a href="https://youtu.be/-ffoytULxdg">Lecture #7 Net platform</a>
-    <a href="dsr/dsr-lecture-7.html" class="js-dsr-lecture">Конспект Лекция 7</a>
-  </p>
-
-  <p>
-    Запись лекции 8 20.11.2023
-    <a href="https://youtu.be/WV1RH22Yswk">Lecture #8 ASP Net Core</a>
-    <a href="dsr/dsr-lecture-8.html" class="js-dsr-lecture">Конспект Лекция 8</a>
-  </p>
-
-  <p>
-    Запись Workshop 1 23.11.2023
-    <a href="https://youtu.be/bBcZaBUcUOo">Workshop #1</a>
-    <a href="dsr/dsr-workshop-1.html" class="js-dsr-workshop">Конспект Workshop 1</a>
-  </p>
-
-  <p>
-    Запись лекции 9 27.11.2023
-    <a href="https://youtu.be/34FFP4nMm-w">Lecture #9 Persistence layer</a>
-    <a href="dsr/dsr-lecture-9.html" class="js-dsr-lecture">Конспект Лекция 9</a>
-  </p>
-
-  <p>
-    Запись Workshop 2 30.11.2023
-    <a href="https://youtu.be/RgNwnHefKdM">Workshop #2</a>
-    <a href="dsr/dsr-workshop-2.html" class="js-dsr-workshop">Конспект Workshop 2</a>
-  </p>
-
-  <p>
-    Запись лекции 10 04.12.2023
-    <a href="https://youtu.be/tiZCQof7i1c">Lecture #10 Persistence layer P2</a>
-    <a href="dsr/dsr-lecture-10.html" class="js-dsr-lecture">Конспект Лекция 10</a>
-  </p>
-
-  <p>
-    Запись Workshop 3 07.12.2023
-    <a href="https://youtu.be/OroUwZbZc-Y">Workshop #3</a>
-    <a href="dsr/dsr-workshop-3.html" class="js-dsr-workshop">Конспект Workshop 3</a>
-  </p>
-
-  <p>
-    Запись лекции 11 11.12.2023
-    <a href="https://youtu.be/tGFNORJgsEk">Lecture #11 Persistence layer P1</a>
-    <a href="dsr/dsr-lecture-11.html" class="js-dsr-lecture">Конспект Лекция 11</a>
-  </p>
-
-  <p>
-    Запись Workshop 4 14.12.2023
-    <a href="https://youtu.be/pA5mtPERhMY">Workshop #4</a>
-    <a href="dsr/dsr-workshop-4.html" class="js-dsr-workshop">Конспект Workshop 4</a>
-  </p>
+<article class="article">
+  <h3>09.10.2023 Lecture #2 C# типы данных</h3>
+  <p><a href="https://youtu.be/AhLj2poT4m8">Запись лекции 2</a></p>  
+  <p><a href="dsr/dsr-lecture-2.html" class="js-dsr-lecture">Конспект Лекция 2</a></p>  
+</article>
+  
+<article class="article">
+  <h3>16.10.2023 Lecture #3 C# part 2</h3>
+  <p><a href="https://youtu.be/Z2WW5MLrmOg">Запись лекции 3</a></p>   
+  <p><a href="dsr/dsr-lecture-3.html" class="js-dsr-lecture">Конспект Лекция 3</a></p>  
+</article>
+  
+<article class="article">
+  <h3>23.10.2023 Lecture #4 Web application</h3>
+  <p><a href="https://youtu.be/zGsMv5Fa3kc">Запись лекции 4</a></p>   
+  <p><a href="dsr/dsr-lecture-4.html" class="js-dsr-lecture">Конспект Лекция 4</a></p>  
+</article>
+  
+<article class="article">
+  <h3>30.10.2023 Lecture #5 Web application</h3>
+  <p><a href="https://youtu.be/zwXRDDHY-1M">Запись лекции 5</a></p>   
+  <p><a href="dsr/dsr-lecture-5.html" class="js-dsr-lecture">Конспект Лекция 5</a></p>  
+</article>
+  
+<article class="article">
+  <h3>09.11.2023 Lecture #6 DBMS</h3>
+  <p><a href="https://youtu.be/fSapZRio5Ao">Запись лекции 6</a></p>   
+  <p><a href="dsr/dsr-lecture-6.html" class="js-dsr-lecture">Конспект Лекция 6</a></p>  
+</article>
+  
+<article class="article">
+  <h3>13.11.2023 Lecture #7 Net platform</h3>
+  <p><a href="https://youtu.be/-ffoytULxdg">Запись лекции 7</a></p>   
+  <p><a href="dsr/dsr-lecture-7.html" class="js-dsr-lecture">Конспект Лекция 7</a></p>  
+</article>
+  
+<article class="article">
+  <h3>20.11.2023 Lecture #8 ASP Net Core</h3>
+  <p><a href="https://youtu.be/WV1RH22Yswk">Запись лекции 8</a></p>   
+  <p><a href="dsr/dsr-lecture-8.html" class="js-dsr-lecture">Конспект Лекция 8</a></p>  
+</article>
+  
+<article class="article">
+  <h3>23.11.2023 Workshop #1</h3>
+  <p><a href="https://youtu.be/bBcZaBUcUOo">Запись Workshop 1</a></p>   
+  <p><a href="dsr/dsr-workshop-1.html" class="js-dsr-workshop">Конспект Workshop 1</a></p>  
+</article>
+  
+<article class="article">
+  <h3>27.11.2023 Lecture #9 Persistence layer</h3>
+  <p><a href="https://youtu.be/34FFP4nMm-w">Запись лекции 9</a></p>   
+  <p><a href="dsr/dsr-lecture-9.html" class="js-dsr-lecture">Конспект Лекция 9</a></p>  
+</article>
+  
+<article class="article">
+  <h3>30.11.2023 Workshop #2</h3>
+  <p><a href="https://youtu.be/RgNwnHefKdM">Запись Workshop 2</a></p>   
+  <p><a href="dsr/dsr-workshop-2.html" class="js-dsr-workshop">Конспект Workshop 2</a></p>  
+</article>
+  
+<article class="article">
+  <h3>04.12.2023 Lecture #10 Persistence layer P2</h3>
+  <p><a href="https://youtu.be/tiZCQof7i1c">Запись лекции 10</a></p>   
+  <p><a href="dsr/dsr-lecture-10.html" class="js-dsr-lecture">Конспект Лекция 10</a></p>  
+</article>
+  
+<article class="article">
+  <h3>07.12.2023 Workshop #3</h3>
+  <p><a href="https://youtu.be/OroUwZbZc-Y">Запись Workshop 3</a></p>   
+  <p><a href="dsr/dsr-workshop-3.html" class="js-dsr-workshop">Конспект Workshop 3</a></p>  
+</article>
+  
+<article class="article">
+  <h3>11.12.2023 Lecture #11 Presentation layer P1</h3>
+  <p><a href="https://youtu.be/tGFONRJgsEk">Запись лекции 11</a></p>   
+  <p><a href="dsr/dsr-lecture-11.html" class="js-dsr-lecture">Конспект Лекция 11</a></p>  
+</article>
+  
+<article class="article">
+  <h3>14.12.2023 Workshop #4</h3>
+  <p><a href="https://youtu.be/pA5mtPERhMY">Запись Workshop 4</a></p>   
+  <p><a href="dsr/dsr-workshop-4.html" class="js-dsr-workshop">Конспект Workshop 4</a></p>  
+</article>
+  
+<article class="article">
+  <h3>18.12.2023 Lecture #12 Presentation layer P2</h3>
+  <p><a href="https://youtu.be/p_Q_f3CNhJw">Запись лекции 12</a></p>   
+  <p><a href="dsr/dsr-lecture-12.html" class="js-dsr-lecture">Конспект Лекция 12</a></p>  
+</article>
+  
+<article class="article">
+  <h3>21.12.2023 Workshop #5</h3>
+  <p><a href="https://youtu.be/JQK2_TAEBg0">Запись Workshop 5</a></p>   
+  <p><a href="dsr/dsr-workshop-5.html" class="js-dsr-workshop">Конспект Workshop 5</a></p>  
+</article>
+  
+<article class="article">
+  <h3>28.12.2023 Workshop #6</h3>
+  <p><a href="https://youtu.be/4rD_Gzv6VfQ">Запись Workshop 6</a></p>   
+  <p><a href="dsr/dsr-workshop-6.html" class="js-dsr-workshop">Конспект Workshop 6</a></p>  
 </article>
 
 <!-- video -->
