--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -34,13 +34,16 @@
     <li><a href="rs-test/rs-test-cssgrid.html" class="js-rs-test">CSS Grid</a> (85 из 100)</li>
     <li><a href="rs-test/rs-test-sass.html" class="js-rs-test">Preprocessors. SASS</a> (86 из 100)</li>
     <li><a href="rs-test/rs-test-cssmodules.html" class="js-rs-test">CSS Modules And Some CSS New Features</a> (81 из 100)</li>
-    <li><a href="rs-test/rs-test-mediaqueries.html" class="js-rs-test">Media Queries & Responsive</a> (0 из 100)</li>
+    <li><a href="rs-test/rs-test-mediaqueries.html" class="js-rs-test">Media Queries & Responsive</a> (93 из 100)</li>
     <hr>
     <li><a href="rs-test/rs-test-htmlform.html" class="js-rs-test">HTML Form</a> (74 из 100)</li>
-    <li><a href="rs-test/rs-test-domapi.html" class="js-rs-test">DOM Api</a> (0 из 100)</li>
+    <li><a href="rs-test/rs-test-domapi.html" class="js-rs-test">DOM Api</a> (82 из 100)</li>
     <li><a href="rs-test/rs-test-domevents.html" class="js-rs-test">DOM Events</a> (84 из 100)</li>
-    <li><a href="rs-test/rs-test-gitgithub.html" class="js-rs-test">Git & GitHub #2</a> (0 из 100)</li>
-    <li><a href="rs-test/rs-test-algorithms.html" class="js-rs-test">Algorithms & Data structures</a> (0 из 100)</li>
+    <li><a href="rs-test/rs-test-gitgithub.html" class="js-rs-test">Git & GitHub #2</a> (96 из 100)</li>
+    <li><a href="rs-test/rs-test-algorithms.html" class="js-rs-test">Algorithms & Data structures</a> (92 из 100)</li>
+    <hr>
+    <li><a href="rs-test/rs-test-cleancode.html" class="js-rs-test">Clean-code</a> (0 из 100)</li>
+    <li><a href="rs-test/rs-test-linters.html" class="js-rs-test">Linters, Formatters and Husky</a> (0 из 100)</li>
   </ol>
 </article>
 
