--- a/src/components/front/front-edu/pages/rs-test/rs-test-algorithms.html
+++ b/src/components/front/front-edu/pages/rs-test/rs-test-algorithms.html
@@ -3,7 +3,7 @@
 
   <h1>[St1] Test Algorithms & Data structures</h1>
 
-  <strong>26 вопросов. Выполнил на 0 баллов из 100</strong>
+  <strong>26 вопросов. Выполнил на 92 баллов из 100</strong>
 </article>
 
 
@@ -12,7 +12,7 @@
 
   <ul>
     <li>Merge Sort</li>
-    <li>Quick Sort</li>
+    <li><strong>Quick Sort</strong></li>
     <li>Bubble Sort</li>
     <li>Binary Search</li>
   </ul>
@@ -24,7 +24,7 @@
 
   <ul>
     <li>O(n)</li>
-    <li>O(log n)</li>
+    <li><strong>O(log n)</strong></li>
     <li>O(n²)</li>
     <li>O(n log n)</li>
   </ul>
@@ -36,7 +36,7 @@
 
   <ul>
     <li>less than</li>
-    <li>greater than</li>
+    <li><strong>greater than</strong></li>
     <li>equal to</li>
     <li>not related to</li>
   </ul>
@@ -49,7 +49,7 @@
   <ul>
     <li>Shortest path in a graph with cycles</li>
     <li>Maximum flow in a network</li>
-    <li>Shortest path between two nodes in a weighted graph</li>
+    <li><strong>Shortest path between two nodes in a weighted graph</strong></li>
     <li>Connectivity in a disjoint graph</li>
   </ul>
 </article>
@@ -62,20 +62,20 @@
     <li>Adding an element to the end of the list / array</li>
     <li>Accessing an arbitrary element by index</li>
     <li>Modifying an arbitrary element by index</li>
-    <li>Outputting all list / array elements to the console</li>
+    <li><strong>Outputting all list / array elements to the console</strong></li>
     <li>Removing an element from the list / array</li>
   </ul>
 </article>
 
 
 <article class="article">
-  <h3>6. In which usage scenarios do Linked List and Array show significantly different operation execution speeds?</h3>
+  <h3>6. In which usage scenarios do Linked List and Array show significantly different operation execution speeds? (checkbox)</h3>
 
   <ul>
-    <li>Accessing an arbitrary element by index</li>
-    <li>Modifying an arbitrary element by index</li>
+    <li><strong>Accessing an arbitrary element by index</strong></li>
+    <li><strong>Modifying an arbitrary element by index</strong></li>
     <li>Outputting all list / array elements to the console</li>
-    <li>Removing an element from the list / array</li>
+    <li><strong>Removing an element from the list / array</strong></li>
   </ul>
 </article>
 
@@ -84,7 +84,7 @@
   <h3>7. What data structure only stores unique elements?</h3>
 
   <ul>
-    <li>Set</li>
+    <li><strong>Set</strong></li>
     <li>Map / Object</li>
     <li>Array</li>
     <li>Linked List</li>
@@ -97,7 +97,7 @@
 
   <ul>
     <li>Stack</li>
-    <li>Queue</li>
+    <li><strong>Queue</strong></li>
     <li>Tree</li>
     <li>Linked List</li>
   </ul>
@@ -109,7 +109,7 @@
 
   <ul>
     <li>Exact worst-case runtime</li>
-    <li>Average case runtime over a sequence of operations</li>
+    <li><strong>Average case runtime over a sequence of operations</strong></li>
     <li>Comparison with other algorithms</li>
     <li>Memory usage over time</li>
   </ul>
@@ -120,7 +120,7 @@
   <h3>10. What does 'hash collision' mean in the context of a Hash Table?</h3>
 
   <ul>
-    <li>A function returning the same hash for different keys</li>
+    <li><strong>A function returning the same hash for different keys</strong></li>
     <li>An error when the table is full</li>
     <li>The process of adding a new element</li>
     <li>Deleting an element from the table</li>
@@ -134,7 +134,7 @@
   <ul>
     <li>Memory usage of an algorithm</li>
     <li>Best-case scenario of an algorithm</li>
-    <li>Execution time or space used by an algorithm</li>
+    <li><strong>Execution time or space used by an algorithm</strong></li>
     <li>Number of operations a CPU can perform</li>
     <li>The size of the headache you get when trying to understand algorithms</li>
   </ul>
@@ -147,7 +147,7 @@
   <ul>
     <li>O(n)</li>
     <li>O(n²)</li>
-    <li>O(n log n)</li>
+    <li><strong>O(n log n)</strong></li>
     <liO(log n)></li>
   </ul>
 </article>
@@ -158,7 +158,7 @@
 
   <ul>
     <li>O(n²)</li>
-    <li>O(n log n)</li>
+    <li><strong>O(n log n)</strong></li>
     <li>O(n)</li>
     <li>O(log n)</li>
     <li>O(😅) - when the data is already sorted by magic.</li>
@@ -167,11 +167,11 @@
 
 
 <article class="article">
-  <h3>14. What is the most common use-case of a Trie data structure? (checkbox)</h3>
+  <h3>14. What is the most common use-case of a Trie data structure?</h3>
 
   <ul>
     <li>Sorting</li>
-    <li>Fast lookups and insertions</li>
+    <li><strong>Fast lookups and insertions</strong></li>
     <li>Balancing other trees</li>
     <li>Network routing</li>
   </ul>
@@ -184,7 +184,7 @@
   <ul>
     <li>O(n²)</li>
     <li>O(n log n)</li>
-    <li>O(n)</li>
+    <li><strong>O(n)</strong></li>
     <li>O(log n)</li>
     <li>O(🎈) - as fast as a bubble pops!</li>
   </ul>
@@ -197,7 +197,7 @@
   <ul>
     <li>Quick Sort</li>
     <li>Bubble Sort</li>
-    <li>Merge Sort</li>
+    <li><strong>Merge Sort</strong></li>
     <li>Insertion Sort</li>
   </ul>
 </article>
@@ -209,7 +209,7 @@
   <ul>
     <li>.forEach()</li>
     <li>.check()</li>
-    <li>.every()</li>
+    <li><strong>.every()</strong></li>
     <li>.some()</li>
     <li>.filter()</li>
     <li>magicMirror()</li>
@@ -222,7 +222,7 @@
 
   <ul>
     <li>Set</li>
-    <li>Map / Tree / Object</li>
+    <li><strong>Map / Tree / Object</strong></li>
     <li>Array</li>
     <li>Linked List</li>
   </ul>
@@ -234,7 +234,7 @@
   <ul>
     <li>Queue</li>
     <li>Heap</li>
-    <li>Stack</li>
+    <li><strong>Stack</strong></li>
     <li>Linked List</li>
   </ul>
 </article>
@@ -245,7 +245,7 @@
 
   <ul>
     <li>Set</li>
-    <li>Map / Object</li>
+    <li><strong>Map / Object</strong></li>
     <li>Array</li>
     <li>Linked List</li>
   </ul>
@@ -258,7 +258,7 @@
   <ul>
     <li>Set</li>
     <li>Map / Object</li>
-    <li>Array</li>
+    <li><strong>Array</strong></li>
     <li>Linked List</li>
   </ul>
 </article>
@@ -268,7 +268,7 @@
   <h3>22. Which elements are accessible in the traditional implementation of the Stack data structure? (checkbox)</h3>
 
   <ul>
-    <li>Only to the top of the stack (the last added element)</li>
+    <li><strong>Only to the top of the stack (the last added element)</strong></li>
     <li>Only to the base of the stack (the first added element)</li>
     <li>Only to the second element after the top</li>
     <li>Access is available to any element of the stack</li>
@@ -281,7 +281,7 @@
 
   <ul>
     <li>Depth-First Search</li>
-    <li>Breadth-First Search</li>
+    <li><strong>Breadth-First Search</strong></li>
     <li>Binary Search</li>
     <li>Merge Sort</li>
   </ul>
@@ -294,7 +294,7 @@
   <ul>
     <li>Set</li>
     <li>Map / Tree / Object</li>
-    <li>Array</li>
+    <li><strong>Array</strong></li>
     <li>Linked List</li>
   </ul>
 </article>
@@ -304,7 +304,7 @@
   <h3>25. Which of the following is not a characteristic of a Max Heap?</h3>
 
   <ul>
-    <li>Parent node is smaller than children</li>
+    <li><strong>Parent node is smaller than children</strong></li>
     <li>Complete binary tree</li>
     <li>Used in Heap Sort</li>
     <li>Parent node is larger than children</li>
@@ -318,7 +318,7 @@
   <ul>
     <li>Bubble Sort</li>
     <li>Merge Sort</li>
-    <li>Quick Sort</li>
+    <li><strong>Quick Sort</strong></li>
     <li>Insertion Sort</li>
   </ul>
 </article>
