--- a/src/components/front/front-edu/pages/rs-test/rs-test-domapi.html
+++ b/src/components/front/front-edu/pages/rs-test/rs-test-domapi.html
@@ -3,7 +3,7 @@
 
   <h1>[St1] DOM Api</h1>
 
-  <strong>34 вопроса. Выполнил на 0 баллов из 100</strong>
+  <strong>34 вопроса. Выполнил на 82 баллов из 100</strong>
 </article>
 
 
@@ -24,12 +24,12 @@
   <h3>2. A tag &lt;input&gt; belongs to the 'HTMLInputElement' class. It inherits methods and properties from: (checkbox)</h3>
 
   <ul>
-    <li>HTMLInputElement</li>
-    <li>HTMLElement</li>
-    <li>Element</li>
+    <li><strong>HTMLInputElement</strong></li>
+    <li><strong>HTMLElement</strong></li>
+    <li><strong>Element</strong></li>
     <li>Window</li>
-    <li>EventTarget</li>
-    <li>Node</li>
+    <li><strong>EventTarget</strong></li>
+    <li><strong>Node</strong></li>
     <li>Document</li>
     <li>Object</li>
   </ul>
@@ -42,7 +42,7 @@
   <ul>
     <li>Yes, they accept values with the boolean type</li>
     <li>Yes, they accept values with types string and object</li>
-    <li>Yes, they accept values with the types boolean, string and object</li>
+    <li><strong>Yes, they accept values with the types boolean, string and object</strong></li>
     <li>No, they can't</li>
   </ul>
 </article>
@@ -56,7 +56,7 @@
     <li>Yes, but these tags will be rendered inside &lt;body&gt;</li>
     <li>Yes, but they will not render</li>
     <li>No, and such tags will not render</li>
-    <li>No, but they will render inside &lt;body&gt;</li>
+    <li><strong>No, but they will render inside &lt;body&gt;</strong></li>
     <li>No, but they will render after &lt;body&gt; in the DOM tree</li>
   </ul>
 </article>
@@ -69,7 +69,7 @@
     <li>Yes, and you can refer to it</li>
     <li>Yes, but only using the special method 'elem.setAttribute(name, value)'</li>
     <li>Yes, but only using the special method 'elem.getAttribute(name)'</li>
-    <li>Not at all</li>
+    <li><strong>Not at all</strong></li>
   </ul>
 </article>
 
@@ -78,7 +78,7 @@
   <h3>6. How do you obtain the value of an element's 'data-name' attribute?</h3>
 
   <ul>
-    <li>elem.dataset(name)</li>
+    <li><strong>elem.dataset(name)</strong></li>
     <li>elem.getData(name)</li>
     <li>elem.getAttribute(name)</li>
     <li>elem.attributes(name)</li>
@@ -94,7 +94,7 @@
     <li>4</li>
     <li>7</li>
     <li>10</li>
-    <li>12</li>
+    <li><strong>12</strong></li>
   </ul>
 </article>
 
@@ -106,7 +106,7 @@
     <li>Yes, it is a text node</li>
     <li>No, it's not a node</li>
     <li>Yes, comments are separate elements/tags</li>
-    <li>Yes, comments are nodes of type 'comment'</li>
+    <li><strong>Yes, comments are nodes of type 'comment'</strong></li>
   </ul>
 </article>
 
@@ -116,7 +116,7 @@
 
     <ul>
       <li>Yes, because the table won't render correctly without it</li>
-      <li>Yes, it's required but the table can still be created without it</li>
+      <li><strong>Yes, it's required but the table can still be created without it</strong></li>
       <li>No, it should not be inside a table according to the standard</li>
       <li>No, it's required outside of a table according to the standard</li>
     </ul>
@@ -128,7 +128,7 @@
 
   <ul>
     <li>Yes, always</li>
-    <li>Never</li>
+    <li><strong>Never</strong></li>
     <li>Only when lastChild promises to be on its best behavior</li>
     <li>Yes, if the elem has child nodes</li>
   </ul>
@@ -139,7 +139,7 @@
   <h3>11. Is the condition truthy: document.body.parentNode === document.documentElement?</h3>
 
   <ul>
-    <li>Yes</li>
+    <li><strong>Yes</strong></li>
     <li>No</li>
   </ul>
 </article>
@@ -151,7 +151,7 @@
   <ul>
     <li>Yes, always</li>
     <li>Never</li>
-    <li>It's true if the elem has child nodes</li>
+    <li><strong>It's true if the elem has child nodes</strong></li>
   </ul>
 </article>
 
@@ -161,7 +161,7 @@
 
   <ul>
     <li>Node</li>
-    <li>EventTarget</li>
+    <li><strong>EventTarget</strong></li>
     <li>Element</li>
     <li>HTMLElement</li>
     <li>None of the above</li>
@@ -170,7 +170,7 @@
 
 
 <article class="article">
-  <h3>14. Look at the code example. What of the following tags are descendants of <body> in a browser? (checkbox)</h3>
+  <h3>14. Look at the code example. What of the following tags are descendants of &lt;body&gt; in a browser? (checkbox)</h3>
 <pre>
 &lt;html&gt;
 &lt;body&gt;
@@ -190,10 +190,10 @@
   <ul>
     <li>&lt;html&gt;</li>
     <li>&lt;body&gt;</li>
-    <li>&lt;div&gt;</li>
-    <li>&lt;ul&gt;</li>
-    <li>&lt;li&gt;</li>
-    <li>&lt;b&gt;</li>
+    <li><strong>&lt;div&gt;</strong></li>
+    <li><strong>&lt;ul&gt;</strong></li>
+    <li><strong>&lt;li&gt;</strong></li>
+    <li><strong>&lt;b&gt;</strong></li>
     <li>&lt;head&gt;</li>
     <li>&lt;script&gt;</li>
   </ul>
@@ -220,12 +220,12 @@
 
   <ul>
     <li>&lt;html&gt;</li>
-    <li>&lt;body&gt;</li>
+    <li><strong>&lt;body&gt;</strong></li>
     <li>&lt;div&gt;</li>
     <li>&lt;ul&gt;</li>
     <li>&lt;li&gt;</li>
     <li>&lt;b&gt;</li>
-    <li>&lt;head&gt;</li>
+    <li><strong>&lt;head&gt;</strong></li>
     <li>&lt;script&gt;</li>
   </ul>
 </article>
@@ -239,7 +239,7 @@
     <li>Function</li>
     <li>Object</li>
     <li>Array</li>
-    <li>Collection</li>
+    <li><strong>Collection</strong></li>
   </ul>
 </article>
 
@@ -248,9 +248,9 @@
   <h3>17. What does describe the method 'document.write' correctly? (checkbox)</h3>
 
   <ul>
-    <li>It works only when the page is loading</li>
+    <li><strong>It works only when the page is loading</strong></li>
     <li>The document's content will remain the same if the method has been called after the page is loaded</li>
-    <li>It will overwrite the document's content if the method has been called after the page is loaded</li>
+    <li><strong>It will overwrite the document's content if the method has been called after the page is loaded</strong></li>
     <li>This method doesn't exist</li>
   </ul>
 </article>
@@ -260,7 +260,7 @@
   <h3>18. What is an HTML tag in the Document Object Model?</h3>
 
   <ul>
-    <li>Object</li>
+    <li><strong>Object</strong></li>
     <li>Variable</li>
     <li>Text</li>
     <li>Link</li>
@@ -276,7 +276,7 @@
     <li>[object Object]</li>
     <li>Nothing, code will throw an error</li>
     <li>head</li>
-    <li>body</li>
+    <li><strong>body</strong></li>
   </ul>
 </article>
 
@@ -288,7 +288,7 @@
     <li>append</li>
     <li>prepend</li>
     <li>before</li>
-    <li>after</li>
+    <li><strong>after</strong></li>
     <li>replaceWith</li>
   </ul>
 </article>
@@ -298,7 +298,7 @@
   <h3>21. What method adds a new node to the end of the existing element?</h3>
 
   <ul>
-    <li>append</li>
+    <li><strong>append</strong></li>
     <li>prepend</li>
     <li>before</li>
     <li>after</li>
@@ -312,7 +312,7 @@
 
   <ul>
     <li>hasAttribute()</li>
-    <li>getAttribute()</li>
+    <li><strong>getAttribute()</strong></li>
     <li>setAttribute()</li>
     <li>attributes()</li>
   </ul>
@@ -335,14 +335,14 @@
 &lt;/ul&gt;
 &lt;/body&gt;
 &lt;/html&gt;
-&lt;/pre&gt;
+</pre>
 
   <ul>
-    <li>&lt;head&gt; and &lt;body&gt;</li>
+    <li><strong>&lt;head&gt; and &lt;body&gt;</strong></li>
     <li>&lt;html&gt; and &lt;body&gt;</li>
     <li>&lt;div&gt; and &lt;body&gt;</li>
-    <li>&lt;div&gt; and &lt;ul&gt;</li>
-    <li>&lt;li&gt; and &lt;li&gt;</li>
+    <li><strong>&lt;div&gt; and &lt;ul&gt;</strong></li>
+    <li><strong>&lt;li&gt; and &lt;li&gt;</strong></li>
     <li>&lt;li&gt; and &lt;b&gt;</li>
     <li>&lt;b&gt; and &lt;b&gt;</li>
   </ul>
@@ -360,7 +360,7 @@
     <li>"beforebegin"</li>
     <li>"afterbegin"</li>
     <li>"beforeend"</li>
-    <li>"afterend"</li>
+    <li><strong>"afterend"</strong></li>
     <li>afterparty</li>
   </ul>
 </article>
@@ -370,8 +370,8 @@
   <h3>25. What the difference is between the methods 'Element.append' and 'Node.appendChild'? (checkbox)</h3>
 
   <ul>
-    <li>'append' returns nothing, and 'appendChild' return the added node object</li>
-    <li>'append' can add several nodes and strings when 'appendChild' can add only one node</li>
+    <li><strong>'append' returns nothing, and 'appendChild' return the added node object</strong></li>
+    <li><strong>'append' can add several nodes and strings when 'appendChild' can add only one node</strong></li>
     <li>'appendChild' is deprecated as well as 'insertBefore', 'replaceChild', 'removeChild'. The 'append' method is recommended for using together with 'prepend', 'before', 'after', 'remove', 'replaceWith'</li>
     <li>'appendChild' accepts strings together with nodes, 'append' accepts only nodes</li>
     <li>There is no difference</li>
@@ -385,7 +385,7 @@
   <ul>
     <li>It will add 'hi' to the existing text content</li>
     <li>It replaces the content of 'someDiv' with 'hi'</li>
-    <li>It will overwrite the text content of 'someDiv' element together with its child elements and replace all with a concatenation of the old content and 'hi'</li>
+    <li><strong>It will overwrite the text content of 'someDiv' element together with its child elements and replace all with a concatenation of the old content and 'hi'</strong></li>
     <li>It will throw an error</li>
     <li>It says 'hi' back, because someDiv is friendly</li>
     <li>It will replace the someDiv element with 'hi'</li>
@@ -399,7 +399,7 @@
   <ul>
     <li>Node</li>
     <li>EventTarget</li>
-    <li>Element</li>
+    <li><strong>Element</strong></li>
     <li>HTMLElement</li>
     <li>None of the above</li>
   </ul>
@@ -410,12 +410,12 @@
   <h3>28. Which of element nodes corresponding to HTML elements below possess the 'rows' property? (checkbox)</h3>
 
   <ul>
-    <li>table</li>
+    <li><strong>table</strong></li>
     <li>tr</li>
     <li>th</li>
     <li>tfoot</li>
     <li>td</li>
-    <li>tbody</li>
+    <li><strong>tbody</strong></li>
     <li>thead</li>
   </ul>
 </article>
@@ -427,9 +427,9 @@
   <ul>
     <li>document.body.style.margin = 10;</li>
     <li>document.body.style.margin = '10';</li>
-    <li>document.body.style.margin = '10px';</li>
+    <li><strong>document.body.style.margin = '10px';</strong></li>
     <li>document.body.style.margin = 10px;</li>
-    <li>document.body.style.marginTop = '1rem';</li>
+    <li><strong>document.body.style.marginTop = '1rem';</strong></li>
   </ul>
 </article>
 
@@ -438,12 +438,12 @@
   <h3>30. Which of the following classes inherit from the 'Element' class? (checkbox)</h3>
 
   <ul>
-    <li>SVGElement</li>
-    <li>HTMLInputElement</li>
-    <li>XMLElement</li>
-    <li>HTMLElement</li>
-    <li>HTMLAnchorElement</li>
-    <li>HTMLBodyElement</li>
+    <li><strong>SVGElement</strong></li>
+    <li><strong>HTMLInputElement</strong></li>
+    <li><strong>XMLElement</strong></li>
+    <li><strong>HTMLElement</strong></li>
+    <li><strong>HTMLAnchorElement</strong></li>
+    <li><strong>HTMLBodyElement</strong></li>
   </ul>
 </article>
 
@@ -452,11 +452,11 @@
   <h3>31. Which of the following methods exist for the Element.classList property? (checkbox)</h3>
 
   <ul>
-    <li>add</li>
-    <li>remove</li>
-    <li>toggle</li>
+    <li><strong>add</strong></li>
+    <li><strong>remove</strong></li>
+    <li><strong>toggle</strong></li>
     <li>replaceWith</li>
-    <li>contains</li>
+    <li><strong>contains</strong></li>
   </ul>
 </article>
 
@@ -465,11 +465,11 @@
   <h3>32. Which of the following options are nodes? (checkbox)</h3>
 
   <ul>
-    <li>comments</li>
-    <li>text nodes</li>
-    <li>HTML tags</li>
+    <li><strong>comments</strong></li>
+    <li><strong>text nodes</strong></li>
+    <li><strong>HTML tags</strong></li>
     <li>JavaScript nodes</li>
-    <li>document</li>
+    <li><strong>document</strong></li>
   </ul>
 </article>
 
@@ -482,9 +482,9 @@
     <li>elem.getElementById(id)</li>
     <li>document.querySelector('div')</li>
     <li>document.querySelectorAll('div')[0]</li>
-    <li>document.querySelectorAll('div')</li>
+    <li><strong>document.querySelectorAll('div')</strong></li>
     <li>elem.matches('elem')</li>
-    <li>document.getElementsByName(name)</li>
+    <li><strong>document.getElementsByName(name)</strong></li>
   </ul>
 </article>
 
@@ -493,10 +493,10 @@
   <h3>34. Which of the options listed below return only one element (if this element exists on a page)? (checkbox)</h3>
 
   <ul>
-    <li>document.getElementById(id)</li>
+    <li><strong>document.getElementById(id)</strong></li>
     <li>document.getElementsByName(name)</li>
-    <li>document.querySelector('div')</li>
-    <li>document.querySelectorAll('div')[0]</li>
+    <li><strong>document.querySelector('div')</strong></li>
+    <li><strong>document.querySelectorAll('div')[0]</strong></li>
     <li>document.querySelectorAll('div')</li>
     <li>elem.matches('elem')</li>
     <li>elem.getElementsByTagName('div')</li>
