--- a/src/components/front/front-tools/pages/elem-tools-git.html
+++ b/src/components/front/front-tools/pages/elem-tools-git.html
@@ -6,7 +6,6 @@
   <p class="content__menu-link" id="content__menu-link2">Установка git и Git Bash</p>
   <p class="content__menu-link" id="content__menu-link3">Первоначальная настройка Git</p>
   <p class="content__menu-link" id="content__menu-link4">Создание репозитория</p>
-  <p class="content__menu-link" id="content__menu-link5">Клонирование репозитория</p>
   <p class="content__menu-link" id="content__menu-link6">Требования к именам коммитов</p>
   <p class="content__menu-link" id="content__menu-link7">О файле .gitignore</p>
   <p class="content__menu-link" id="content__menu-link8">Команды консоли</p>
@@ -60,8 +59,25 @@
   <div class="content__item" id="content__item3">
     <h3>Первоначальная настройка Git</h3>
     <ul>
-      <li>Теперь, когда Git установлен в вашей системе, самое время настроить среду для работы с Git под себя. Это нужно сделать только один раз — при обновлении версии Git настройки сохранятся. Но, при необходимости, вы можете поменять их в любой момент, выполнив те же команды снова.</li>
-      <li>В состав Git входит утилита git config, которая позволяет просматривать и настраивать параметры, контролирующие все аспекты работы Git, а также его внешний вид. В зависимости от области действия и места хранения в Git cуществуют 3 типа настроек:</li>
+      <li>Теперь, когда Git установлен в вашей системе, самое время настроить среду для работы с Git под себя. Это нужно сделать только один раз — при обновлении версии Git настройки сохранятся. Но, при необходимости, вы можете поменять их в любой момент, выполнив те же команды снова.</li>
+      <li>В состав Git входит утилита git config, которая позволяет просматривать и настраивать параметры, контролирующие все аспекты работы Git, а также его внешний вид. Для начала необходимо задать в глобальной конфигурации имя пользователя, электронную почту и имя начальной ветки.</li>
+      <li>Зададим имя пользователя Frontend200tb
+      <code>git config --global user.name "Frontend200tb"</code>
+      Зададим почту frontend200tb@mail.ru
+      <code>git config --global user.email "frontend200tb@mail.ru"</code>
+      Зададим имя начальной ветки master
+      <code>git config --global init.defaultBranch master</code>
+      Проверим имя пользователя в глобальной конфигурации
+      <code>git config --global user.name
+      <br>frontend200tb</code>
+      Проверим электронную почту пользователя в глобальной конфигурации
+      <code>git config --global user.email
+      <br>frontend200tb@mail.ru</code>
+      Проверим имя начальной ветки в глобальной конфигурации
+      <code>git config --global init.defaultBranch
+      <br>master</code>
+      </li>
+      <li>В зависимости от области действия и места хранения в Git cуществуют 3 типа настроек:</li>
     </ul>
 
     <ol>
@@ -85,21 +101,6 @@
       <code>git config --list</code>
       Посмотрим все установленные настройки и узнаем где именно они заданы
       <code>git config --list --show-origin</code>
-      Задать глобально имя пользователя
-      <code>git config --global user.name "Frontend200tb"</code>
-      Задать глобально электронную почту пользователя
-      <code>git config --global user.email "frontend200tb@mail.ru"</code>
-      Задать глобально имя начальной ветки (например, master)
-      <code>git config --global init.defaultBranch master</code>
-      Проверим имя пользователя в глобальной конфигурации
-      <code>git config --global user.name
-      <br>frontend200tb</code>
-      Проверим электронную почту пользователя в глобальной конфигурации
-      <code>git config --global user.email
-      <br>frontend200tb@mail.ru</code>
-      Проверим имя начальной ветки в глобальной конфигурации
-      <code>git config --global init.defaultBranch
-      <br>master</code>
       Локально для конкретного проекта (эти настройки переопределят глобальные)
       <code>git config --local user.name "Frontend200tb"
       <br>git config --local user.email "frontend200tb@mail.ru"</code>
@@ -111,44 +112,22 @@
   <div class="content__item" id="content__item4">
     <h3>Создание репозизтория</h3>
     <ul>
-      <li>Начать работу с Git можно четырьмя способами
-        <p>1. Клонировать существующий репозиторий из GitHub на локальный компьютер</p>
-        <p>2. Создать новый репозиторий на GitHub и клонировать его на локальный компьютер</p>
-        <p>3. Связать существующий репозиторий на локальном компьютере с новым репозиторием на GitHub</p>
-        <p>4. Создать новый репозиторий на локальном компьютере и связать его с новым репозиторием на GitHub</p>
+      <li>Начать работу с Git можно 2 способами
+        <p>1. Создать новый репозиторий на GitHub (если его еще нет)</p>
+        <p>2. Клонировать существующий репозиторий из GitHub на локальный компьютер</p>
+        или
+        <p>3. Создать новый проект на локальном компьютере</p>
+        <p>4. Создать репозиторий на локальном компьютере</p>
+        <p>5. Связать существующий репозиторий на локальном компьютере с новым репозиторием на GitHub</p>
       </li>
     </ul>
 
-    <h3>Создание репозитория в существующем каталоге</h3>
+    <h3>1. Создать новый репозиторий на GitHub</h3>
     <ul>
-      <li>Если уже есть проект в каталоге, который нужно добавить под версионный контроль Git. Или если мы создаем новый каталог, в котором будет проект, который нужно добавить под версионный контроль Git. Нужно зайти в этот каталог и выполнить команду
-      <code>git init</code></li>
-
-      <li>Эта команда создаёт в текущем каталоге новый подкаталог с именем .git, содержащий все необходимые файлы репозитория — структуру Git репозитория. На этом этапе ваш проект ещё не находится под версионным контролем</li>
-
-      <li>Если вы хотите добавить под версионный контроль существующие файлы (в отличие от пустого каталога), вам стоит добавить их в индекс и осуществить первый коммит изменений.</li>
-
-      <li>Создайте новый репозиторий на GitHub. Чтобы избежать ошибок, не создавайте в нем файл лицензии, readme, gitignore и другие. Эти файлы можно добавить потом, когда проект будет залит на github</li>
-      <li>В верхней части репозитория скопируйте URL-адрес удаленного репозитория.</li>
-      <li>Откройте GIT Bash.</li>
-      <li>Измените текущий рабочий каталог на локальный проект.</li>
-      <li>В командной строке добавьте URL-адрес удаленного репозитория, в который будет отправлен локальный репозиторий.
-        <code>$ git remote add origin &lt;REMOTE_URL&gt;
-        <br># Sets the new remote
-        <br>$ git remote -v
-        <br># Verifies the new remote URL</code>
-      </li>
-      <li>Отправьте изменения в локальном репозитории на GitHub.com. Для команды git push нужно указывать ветку и удаленный репозиторий.
-        <code>git push origin master</code>
-        Если ветка master не является отслеживаемой веткой, то нужно один раз выполнить команду с флагом -u (сокращение от --set-upstream) чтобы сделать удаленную ветку master репозитория origin отслеживаемой. Потом можно будет отправлять изменения лишь выполняя git push
-        <code>git push -u origin master</code>
-      </li>
+      <li>Перейдите на https://github.com и войдите в свой аккаунт. Нажмите кнопку New repository (Новый репозиторий). На открывшейся странице введите имя репозитория (Repository name) и нажмите кнопку Create repository. Данная команда добавит удаленный репозиторий с именем origin, который указывает на ваш Github-репозиторий.</li>
     </ul>
-  </div>
 
-
-  <div class="content__item" id="content__item5">
-    <h3>Клонирование существующего репозитория</h3>
+    <h3>2. Клонировать существующий репозиторий из GitHub на локальный компьютер</h3>
     <ul>
       <li>Для получения копии существующего Git-репозитория, например, проекта, в который вы хотите внести свой вклад, необходимо использовать команду
       <code>git clone &lt;url&gt;</code></li>
@@ -167,6 +146,39 @@
         Вывод должен выглядеть так
         <code>origin	ssh://git@gitserver.com:user/repo_name.git (fetch)
         <br>origin	ssh://git@gitserver.com:user/repo_name.git (push)</code>
+      </li>
+    </ul>
+
+    <h3>3. Создать новый проект на локальном компьютере</h3>
+    <ul>
+      <li>Создадим новый каталог, в котором будет проект, который нужно добавить под версионный контроль Git.</li>
+    </ul>
+
+    <h3>4. Создать репозиторий на локальном компьютере</h3>
+    <ul>
+      <li>Если уже есть проект в каталоге, который нужно добавить под версионный контроль Git. Нужно зайти в этот каталог и выполнить команду
+      <code>git init</code></li>
+
+      <li>Эта команда создаёт в текущем каталоге новый подкаталог с именем .git, содержащий все необходимые файлы репозитория — структуру Git репозитория. На этом этапе ваш проект ещё не находится под версионным контролем</li>
+
+      <li>Если вы хотите добавить под версионный контроль существующие файлы (в отличие от пустого каталога), вам стоит добавить их в индекс и осуществить первый коммит изменений.</li>
+    </ul>
+
+    <h3>5. Связать существующий репозиторий на локальном компьютере с новым репозиторием на GitHub</h3>
+    <ul>
+      <li>В верхней части нового репозитория на GitHub скопируйте URL-адрес удаленного репозитория.</li>
+      <li>Откройте GIT Bash.</li>
+      <li>Измените текущий рабочий каталог на локальный проект.</li>
+      <li>В командной строке добавьте URL-адрес удаленного репозитория, в который будет отправлен локальный репозиторий.
+        <code>$ git remote add origin &lt;REMOTE_URL&gt;
+        <br># Sets the new remote
+        <br>$ git remote -v
+        <br># Verifies the new remote URL</code>
+      </li>
+      <li>Отправьте изменения в локальном репозитории на GitHub.com. Для команды git push нужно указывать ветку и удаленный репозиторий.
+        <code>git push origin master</code>
+        Если ветка master не является отслеживаемой веткой, то нужно один раз выполнить команду с флагом -u (сокращение от --set-upstream) чтобы сделать удаленную ветку master репозитория origin отслеживаемой. Потом можно будет отправлять изменения лишь выполняя git push
+        <code>git push -u origin master</code>
       </li>
     </ul>
   </div>
@@ -355,60 +367,61 @@ foo.txt
   <div class="content__item" id="content__item10">
     <h2>Команды Git Bush</h2>
     <ul>
-    <li>Все команды git начинаются со слова git и работают только при установленной git.</li>
+      <li>Все команды git начинаются со слова git и работают только при установленной git.</li>
     </ul>
 
     <h3>Создание локального репозитория git init</h3>
     <ul>
-    <li>Создать новый репозиторий в текущей директории
-    <code>git init</code>
-    При этом создалась системная папка .git в корне текущей директории, в которой будет вся история репозитория.
-    </li>
-    <li>Создание репозитория в указанном каталоге
-    <code>git init <директория></code></li>
+      <li>Создать новый репозиторий в текущей директории
+      <code>git init</code>
+      При этом создалась системная папка .git в корне текущей директории, в которой будет вся история репозитория.
+      </li>
+      <li>Создание репозитория в указанном каталоге
+      <code>git init <директория></code></li>
+    </ul>
 
     <h3>Клонирование удаленного репозитория git clone</h3>
     <ul>
-    <li>Клонирование удаленного репозитория в локальный каталог с именем по умолчанию
-    <code>git clone https://github.com/n0tb0dy/RemoreBranches.git</code></li>
-    <li>Клонирование удаленного репозитория в локальный каталог с указанным именем<code>git clone https://github.com/n0tb0dy/RemoreBranches.git LocalBranches</code></li>
+      <li>Клонирование удаленного репозитория в локальный каталог с именем по умолчанию
+      <code>git clone https://github.com/n0tb0dy/RemoreBranches.git</code></li>
+      <li>Клонирование удаленного репозитория в локальный каталог с указанным именем<code>git clone https://github.com/n0tb0dy/RemoreBranches.git LocalBranches</code></li>
     </ul>
 
     <h3>git remote</h3>
     <ul>
-    <li>Посмотреть какие есть удаленные репозитории связанные с нашим локальным
-    <code>git remote
-    <br>origin</code></li>
-    <li>Посмотреть откуда мы получаем данные и куда мы их отправляем
-    <code>git remote -v
-    <br>origin git@github.com/myrepo.git (fetch)
-    <br>origin git@github.com/myrepo.git (push)</code></li>
-    <li>Посмотреть какая ссылка соотносится с удаленным репозиторием origin
-    <code>git remote get-url origin
-    <br>origin git@github.com/myrepo.git</code></li>
-    <li>Добавить новый удаленный репозиторий, который находится по указанному адресу. При этом на нашем компьютере к удаленному репозиторию мы будем обращаться по его названию
-    <code>remote add <название> <адрес></code></li>
-    <li>Удалить репозиторий с указанным названием
-    <code>remote remove <название></code></li>
+      <li>Посмотреть какие есть удаленные репозитории связанные с нашим локальным
+      <code>git remote
+      <br>origin</code></li>
+      <li>Посмотреть откуда мы получаем данные и куда мы их отправляем
+      <code>git remote -v
+      <br>origin git@github.com/myrepo.git (fetch)
+      <br>origin git@github.com/myrepo.git (push)</code></li>
+      <li>Посмотреть какая ссылка соотносится с удаленным репозиторием origin
+      <code>git remote get-url origin
+      <br>origin git@github.com/myrepo.git</code></li>
+      <li>Добавить новый удаленный репозиторий, который находится по указанному адресу. При этом на нашем компьютере к удаленному репозиторию мы будем обращаться по его названию
+      <code>remote add <название> <адрес></code></li>
+      <li>Удалить репозиторий с указанным названием
+      <code>remote remove <название></code></li>
     </ul>
 
     <h3>git status</h3>
     <ul>
-    <li>Показать список измененных, добавленных и удаленных файлов
-    <code>git status</code></li>
-    <li>Файлы в рабочем каталоге могут быть
-    <code>tracked - под версионным контролем (отслеживаемые)</code>
-    <code>untracked - не под версионным контролем (не отслеживаемые)</code></li>
-    <li>tracked файлы могут быть
-    <code>modified (измененные)</code>
-    <code>staged (подготовленные к коммиту)</code>
-    <code>commited (добавленные в коммит)</code></li>
+      <li>Показать список измененных, добавленных и удаленных файлов
+      <code>git status</code></li>
+      <li>Файлы в рабочем каталоге могут быть
+      <code>tracked - под версионным контролем (отслеживаемые)</code>
+      <code>untracked - не под версионным контролем (не отслеживаемые)</code></li>
+      <li>tracked файлы могут быть
+      <code>modified (измененные)</code>
+      <code>staged (подготовленные к коммиту)</code>
+      <code>commited (добавленные в коммит)</code></li>
     </ul>
 
     <h3>git status -s</h3>
     <ul>
-    <li>Показать список в сокращенном виде
-    <code>git status -s</code></li>
+      <li>Показать список в сокращенном виде
+      <code>git status -s</code></li>
     </ul>
 
     <h3>git add</h3>
