--- a/src/components/front/front-edu/pages/dsr/dsr2023net-workshop2.html
+++ b/src/components/front/front-edu/pages/dsr/dsr2023net-workshop2.html
@@ -1,6 +1,9 @@
-<a href="#" id="edu-dsr">назад</a>
+<article class="article">
+	<div id="link-to-dsr2023net" class="btn-back">назад</div>
 
-<h1>2023-11-30 Workshop #2</h1>
+  <h1>2023-11-30 Workshop #2</h1>
+</article>
+
 
 <ul>
   <li>
